# Automated_Forecasting

./: .banas_forecasting_public_mc_historical_forecast_state.json  .env.example  .gitignore  Automated forecasting for sensitive district-level data - Claude.html  CLAUDE.md  README.md  automated_forecasting_agent_workflow.md  forecast.csv  pyproject.toml  requirements.txt  run_dev.bat  run_forecast.bat  run_frontend.bat  setup_venv.bat
.forecast_state/: drift_state.json
Automated forecasting for sensitive district-level data - Claude_files/: api(1).js.download  c6a992d55-CvsZ6KID.css  cded40f2a-BM99Zec0.css  saved_resource.html
agents/: cleaning_agent.py  llm_client.py  model_selector_agent.py
api/: jobs.py  main.py  routes.py  tasks.py
automated_forecasting_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: model_categories.yaml  settings.yaml
docs/: agent_workflow.md  forecasting_model_families_guide.md
frontend/: app.py  callbacks.py  layout.py
frontend/assets/: 3_custom.css
models_lib/: base_model.py  statistical.py
pipeline/: cleaner.py  ingest.py  pre_clean_eda.py  validation_gate.py
results/: first_step.csv  second_step.csv  third_step.csv
src/automated_forecasting/: __init__.py  calendar_features.py  cli.py  db_source.py  diagnostics.py  drift_monitor.py  pipeline.py
src/automated_forecasting_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
